ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractInstantiations2/input.ts

class H { // error -- not declared abstract
    abstract baz(): number;
}